--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Embedded Video</title>
+    <title>Lo-Fi Haven</title>
 
     <style>
         .logo {
             text-align: center;
             padding: 10px;
             margin-top: 20px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         body {
