--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
     <style>
         .logo {
-            text-align: center;
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin: 0 auto;
             padding: 10px;
-            margin-top: 20px;
-            margin-left: auto;
-            margin-right: auto;
         }
 
         body {
