--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Lo-Fi Haven</title>
 
     <style>
+        header {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
         .logo {
             max-width: 100%;
             height: auto;
