--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             border-radius: 10px;
             width: 90%;
             max-width: 900px;
+            justify-content: center;
         }
 
         h1 {
