--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         }
 
         main {
-            padding: 20px;
+            padding: 50px;
             border-radius: 10px;
             width: 90%;
             max-width: 900px;
-            justify-content: center;
+            justify-content: auto;
         }
 
         h1 {
