--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             height: auto;
             display: block;
             margin: 0 auto;
-            padding: 30px;
+            padding: 10px;
         }
 
         body {
@@ -38,11 +38,16 @@
         }
 
         main {
-            padding: 50px;
-            border-radius: 10px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            padding: 20px;
+            border-radius: 100px;
             width: 90%;
-            max-width: 900px;
-            justify-content: auto;
+            max-width: 10000px;
+            margin: 0 auto;
         }
 
         h1 {
