--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
             justify-content: center;
             align-items: center;
         }
-        .logo {
-            max-width: 100%;
+        .logo img {
+            max-width: 80%; /* Responsive logo size */
             height: auto;
             display: block;
             margin: 0 auto;
-            padding: 30px;
+            padding: 10px;
         }
 
         body {
@@ -46,7 +46,7 @@
             padding: 20px;
             border-radius: 100px;
             width: 90%;
-            max-width: 10000px;
+            max-width: 1200px; /* Fixed width to prevent overly large containers */
             margin: 0 auto;
         }
 
@@ -67,12 +67,12 @@
         }
 
         .video-item {
-    position: relative;
-    width: calc(35% - 30px);
-    height: 0;
-    padding-bottom: 20%;
-    box-sizing: border-box;
-}
+            position: relative;
+            width: calc(35% - 30px);
+            height: 0;
+            padding-bottom: 20%;
+            box-sizing: border-box;
+        }
 
         .video-item iframe {
             position: absolute;
@@ -83,9 +83,17 @@
             border: none;
         }
 
+        .video-border {
+            background-color: rgba(255, 255, 255, 0.364);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.398);
+        }
+
         @media (max-width: 768px) {
             .video-item {
                 width: 100%;
+                padding-bottom: 56.25%; /* Maintains 16:9 aspect ratio */
             }
 
             h1 {
@@ -98,22 +106,24 @@
 
             main {
                 padding: 15px;
+                max-width: 90%;
+            }
+
+            .logo img {
+                max-width: 80%;
+                height: auto;
+            }
+
+            body {
+                background-attachment: scroll; /* Fixes mobile background issue */
             }
         }
-
-        .video-border {
-            background-color: rgba(255, 255, 255, 0.364);
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.398);
-        }
     </style>
-
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="Lo-Fi2.svg" alt="Logo" style="width: 500px; height: auto;">
+            <img src="Lo-Fi2.svg" alt="Logo">
         </div>
     </header>
         
