--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             align-items: center;
         }
         .logo img {
-            max-width: 80%; /* Responsive logo size */
+            max-width: 80%;
             height: auto;
             display: block;
             margin: 0 auto;
@@ -46,7 +46,7 @@
             padding: 20px;
             border-radius: 100px;
             width: 90%;
-            max-width: 1200px; /* Fixed width to prevent overly large containers */
+            max-width: 1200px;
             margin: 0 auto;
         }
 
@@ -60,17 +60,18 @@
 
         .video-grid {
             display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
+            flex-direction: column;
+            align-items: center;
             gap: 20px;
             margin-top: 10px;
+            width: 100%;
         }
 
         .video-item {
             position: relative;
-            width: calc(35% - 30px);
+            width: 100%;
             height: 0;
-            padding-bottom: 20%;
+            padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
             box-sizing: border-box;
         }
 
@@ -88,34 +89,20 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.398);
+            width: 80%;
+            max-width: 900px;
         }
 
-        @media (max-width: 768px) {
+        @media (min-width: 769px) {
+            .video-grid {
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: center;
+            }
+
             .video-item {
-                width: 100%;
-                padding-bottom: 56.25%; /* Maintains 16:9 aspect ratio */
-            }
-
-            h1 {
-                font-size: 6vw;
-            }
-
-            h2 {
-                font-size: 4vw;
-            }
-
-            main {
-                padding: 15px;
-                max-width: 90%;
-            }
-
-            .logo img {
-                max-width: 80%;
-                height: auto;
-            }
-
-            body {
-                background-attachment: scroll; /* Fixes mobile background issue */
+                width: 30%;
+                padding-bottom: 16.875%; /* 16:9 Aspect Ratio for three items per row */
             }
         }
     </style>
