--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             background-position: center;
             background-repeat: no-repeat;
             background-attachment: fixed;
-            height: 100vh;
+            min-height: 100vh;
             margin: 0;
             display: flex;
             justify-content: center;
