--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     </div>
 
     <div class=" video-box">
-    <iframe src="https://www.youtube.com/embed/QCwBkQaodWc?si=iDoW8hZ9jw3KRIVC" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/MpLfpBJBgS0?si=vwpxNGQqo_t2SVJ4" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/o3Je-99OYAY?si=Qp4TEMM5OjSkXLmt" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/mbJDk0dRLn8?si=Pzy51-B2LHLVS-p4" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/QLrFLovfEJI?si=qyz8-Capx6EyvTBe" allowfullscreen></iframe>
-    <iframe src="https://www.youtube.com/embed/eEZF9iIv5XM?si=jlxTy53er5iqKBoa" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/QCwBkQaodWc?si=9rJznD7B6L9GLPmE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/MpLfpBJBgS0?si=vwpxNGQqo_t2SVJ4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/o3Je-99OYAY?si=Qp4TEMM5OjSkXLmt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/mbJDk0dRLn8?si=Pzy51-B2LHLVS-p4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/QLrFLovfEJI?si=qyz8-Capx6EyvTBe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/eEZF9iIv5XM?si=jlxTy53er5iqKBoa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"allowfullscreen></iframe>
 
     
 </div>
